[gd_scene format=3 uid="uid://b1kv7haeowpg1"]

[ext_resource type="Script" uid="uid://dvyvj4dyo8wvd" path="res://systems/game/ui/cockpit/cockpit_layer.gd" id="1_bcflq"]
[ext_resource type="Texture2D" uid="uid://6t4p4gorsllg" path="res://assets/graphics/ui_elements/parts/Noise_Background_Border.png" id="2_c6uc4"]
[ext_resource type="Texture2D" uid="uid://cr5ovs3vac1bm" path="res://assets/graphics/ui_elements/parts/panel_left.png" id="3_fcohk"]
[ext_resource type="Texture2D" uid="uid://dadkyxiyryjdr" path="res://assets/graphics/ui_elements/parts/center_screen.png" id="5_6oge8"]
[ext_resource type="Theme" uid="uid://cnev7rfnbos30" path="res://systems/game/ui/resources/styles/button_green.tres" id="5_608f7"]
[ext_resource type="Texture2D" uid="uid://coidguxplvm40" path="res://assets/graphics/ui_elements/parts/monitor.png" id="5_c5ggg"]
[ext_resource type="PackedScene" uid="uid://cwj2m2e7vk588" path="res://systems/game/ui/cockpit/skill_stree/skill_tree.tscn" id="6_608f7"]
[ext_resource type="Texture2D" uid="uid://mk167mdk5dw8" path="res://assets/graphics/ui_elements/parts/panel_right.png" id="6_b7sfu"]
[ext_resource type="Texture2D" uid="uid://48lgw05a2y0d" path="res://assets/graphics/ui_elements/parts/map.png" id="7_nqukr"]
[ext_resource type="PackedScene" uid="uid://bjt4agfrhk2a3" path="res://systems/game/ui/cockpit/display/display_control.tscn" id="8_jn78n"]
[ext_resource type="Texture2D" uid="uid://bps5qwlsdamhd" path="res://assets/graphics/ui_elements/parts/sequencer_plus.png" id="9_xtbsf"]
[ext_resource type="Texture2D" uid="uid://dw2oqwmh82kho" path="res://assets/graphics/ui_elements/parts/normal maps/map_normalMap.png" id="10_608f7"]
[ext_resource type="Script" uid="uid://015i05q7borf" path="res://systems/game/ui/cockpit/bpm_indicator/bpm_indicator_light.gd" id="10_ggp0q"]
[ext_resource type="Texture2D" uid="uid://bn1wpie5janyf" path="res://assets/graphics/ui_elements/parts/sequencer_bpm_indicator.png" id="11_f5wda"]
[ext_resource type="Texture2D" uid="uid://dgu5alv1c5l4g" path="res://assets/graphics/ui_elements/parts/normal maps/map_specular.png" id="11_run0f"]
[ext_resource type="PackedScene" uid="uid://dbrs1rlqpfdmb" path="res://systems/game/ui/cockpit/sequencer/sequencer.tscn" id="12_ck5gw"]
[ext_resource type="Texture2D" uid="uid://cx8eo1e83jdmo" path="res://assets/graphics/ui_elements/parts/companion_1_empty.png" id="13_egt0l"]

[sub_resource type="CanvasTexture" id="CanvasTexture_nyo8s"]
diffuse_texture = ExtResource("7_nqukr")
normal_texture = ExtResource("10_608f7")
specular_texture = ExtResource("11_run0f")

[node name="CockpitLayer" type="CanvasLayer" unique_id=1829790468]
layer = 12
script = ExtResource("1_bcflq")

[node name="SkillTree" parent="." unique_id=1828296432 instance=ExtResource("6_608f7")]
visible = false
upgrade_system = null

[node name="CockpitRoot" type="Control" parent="." unique_id=1442145762]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CockpitPivot" type="Control" parent="CockpitRoot" unique_id=1014371952]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1920.0
offset_top = -1200.0
offset_right = 1920.0
offset_bottom = 1200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)

[node name="Frame" type="TextureRect" parent="CockpitRoot/CockpitPivot" unique_id=1485604189]
modulate = Color(0.4154333, 0.41543326, 0.41543326, 1)
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2400.0
texture = ExtResource("2_c6uc4")

[node name="LeftCase" type="Control" parent="CockpitRoot/CockpitPivot" unique_id=1606383611]
anchors_preset = 0
offset_left = 320.0
offset_top = 281.0
offset_right = 1035.0
offset_bottom = 2125.0

[node name="BackgroundImage" type="TextureRect" parent="CockpitRoot/CockpitPivot/LeftCase" unique_id=704477430]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_fcohk")

[node name="ModuleContainer" type="Control" parent="CockpitRoot/CockpitPivot/LeftCase" unique_id=258625389]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Monitor" type="Control" parent="CockpitRoot/CockpitPivot/LeftCase/ModuleContainer" unique_id=1470145659]
anchors_preset = 0
offset_top = 2.0
offset_right = 703.0
offset_bottom = 458.0

[node name="TextureRect" type="TextureRect" parent="CockpitRoot/CockpitPivot/LeftCase/ModuleContainer/Monitor" unique_id=74488195]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_c5ggg")

[node name="CanvasLayer" type="CanvasLayer" parent="CockpitRoot/CockpitPivot/LeftCase" unique_id=648233958]
layer = 7

[node name="StartButton" type="Button" parent="CockpitRoot/CockpitPivot/LeftCase/CanvasLayer" unique_id=29240756]
offset_left = 216.0
offset_top = 688.0
offset_right = 683.0
offset_bottom = 771.0
theme = ExtResource("5_608f7")
theme_override_font_sizes/font_size = 32
text = "Start Level"

[node name="NextLevelButton" type="Button" parent="CockpitRoot/CockpitPivot/LeftCase/CanvasLayer" unique_id=605741576]
offset_left = 210.0
offset_top = 961.0
offset_right = 818.0
offset_bottom = 1044.0
theme = ExtResource("5_608f7")
theme_override_font_sizes/font_size = 32
text = "Load Next Level"

[node name="CenterScreen" type="Control" parent="CockpitRoot/CockpitPivot" unique_id=1929592807]
anchors_preset = 0
offset_left = 1025.0
offset_top = 281.0
offset_right = 2822.0
offset_bottom = 2125.0
mouse_default_cursor_shape = 3

[node name="MainDisplay" type="Control" parent="CockpitRoot/CockpitPivot/CenterScreen" unique_id=1936915033]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CockpitRoot/CockpitPivot/CenterScreen/MainDisplay" unique_id=1373145839]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 24

[node name="DisplayFrameImage" type="TextureRect" parent="CockpitRoot/CockpitPivot/CenterScreen" unique_id=241368181]
layout_mode = 0
offset_right = 1793.0001
offset_bottom = 1836.0
texture = ExtResource("5_6oge8")

[node name="RightCase" type="Control" parent="CockpitRoot/CockpitPivot" unique_id=1084629457]
anchors_preset = 0
offset_left = 2816.0
offset_top = 281.0
offset_right = 3531.0
offset_bottom = 2125.0

[node name="BackgroundImage" type="TextureRect" parent="CockpitRoot/CockpitPivot/RightCase" unique_id=1647565984]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_b7sfu")

[node name="ModuleContainer" type="Control" parent="CockpitRoot/CockpitPivot/RightCase" unique_id=521229978]
layout_mode = 1
anchors_preset = 0

[node name="DisplayModule" type="Control" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer" unique_id=2054421085]
anchors_preset = 0
offset_top = 6.796112
offset_right = 699.0
offset_bottom = 916.79614

[node name="TextureRect" type="Sprite2D" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer/DisplayModule" unique_id=580624595]
position = Vector2(353, 453.2039)
texture = SubResource("CanvasTexture_nyo8s")

[node name="TextureRect2" type="TextureRect" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer/DisplayModule" unique_id=1750324570]
visible = false
layout_mode = 0
offset_right = 705.0
offset_bottom = 907.0
texture = ExtResource("7_nqukr")

[node name="DisplayControl" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer/DisplayModule" unique_id=1954027334 instance=ExtResource("8_jn78n")]
unique_name_in_owner = true
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.528
anchor_top = 0.5
anchor_right = 0.528
anchor_bottom = 0.5
offset_left = -260.81198
offset_top = -286.77002
offset_right = 261.18802
offset_bottom = 286.77026
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)

[node name="SequencerModule" type="Control" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer" unique_id=1128202304]
anchors_preset = 0
offset_top = 874.82544
offset_right = 835.0
offset_bottom = 1169.8254

[node name="TextureRect" type="TextureRect" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer/SequencerModule" unique_id=795991221]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("9_xtbsf")

[node name="BPMIndicatorLight" type="Control" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer/SequencerModule" unique_id=1923533666]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 58.0
offset_top = 55.17456
offset_right = 98.0
offset_bottom = 95.17456
script = ExtResource("10_ggp0q")

[node name="BPMLight" type="TextureRect" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer/SequencerModule/BPMIndicatorLight" unique_id=421804666]
modulate = Color(0.08965943, 0.089659445, 0.089659445, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11_f5wda")

[node name="Sequencer" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer/SequencerModule" unique_id=1605387223 instance=ExtResource("12_ck5gw")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 65.000114
offset_top = 106.174614
offset_right = -162.99988
offset_bottom = 245.17462

[node name="Companion1Module" type="Control" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer" unique_id=1692551710]
anchors_preset = 0
offset_top = 1140.0
offset_right = 699.0
offset_bottom = 1404.0

[node name="TextureRect" type="TextureRect" parent="CockpitRoot/CockpitPivot/RightCase/ModuleContainer/Companion1Module" unique_id=231515389]
layout_mode = 0
offset_right = 771.0
offset_bottom = 232.0
texture = ExtResource("13_egt0l")

[connection signal="pressed" from="CockpitRoot/CockpitPivot/LeftCase/CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CockpitRoot/CockpitPivot/LeftCase/CanvasLayer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
